<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">First</string>
    <string name="result">结果为：</string>
    <string name="btn">计算</string>
    <string name="hint">请输入摄氏度</string>
    <string name="lable_add1" tools:ignore="MissingTranslation">+1 point</string>
    <string name="lable_add2" tools:ignore="MissingTranslation">+2 points</string>
    <string name="lable_add3" tools:ignore="MissingTranslation">+3 points</string>
    <string name="btn_dollar_label" tools:ignore="MissingTranslation">Dollar</string>
    <string name="btn_euro_label" tools:ignore="MissingTranslation">Euro</string>
    <string name="btn_won_label" tools:ignore="MissingTranslation">Won</string>
    <string name="rmb_hint" tools:ignore="MissingTranslation">Input RMB</string>
    <string name="btn_int" tools:ignore="MissingTranslation">modify</string>
    <string name="rate_dollar" tools:ignore="MissingTranslation">dollar</string>
    <string name="rate_euro" tools:ignore="MissingTranslation">euro</string>
    <string name="rate_won" tools:ignore="MissingTranslation">won</string>
    <string name="btn_return_label" tools:ignore="MissingTranslation">return</string>
    <string name="btn_set_label" tools:ignore="MissingTranslation">setting</string>
    <string name="label_open_list" tools:ignore="MissingTranslation">OpenList</string>
    <string name="rdo_home_label" tools:ignore="MissingTranslation">动物</string>
    <string name="rdo_func_label" tools:ignore="MissingTranslation">建筑</string>
    <string name="rdo_setting_label" tools:ignore="MissingTranslation">城市</string>

</resources>
